# dependencies-hoover

./: .gitignore  Cargo.toml  README.md  config.toml
mock/app/: index.js  package.json
mock/lib/: utils.js
src/: helpers.rs  main.rs
