[package]
name = "dependencies_hoover"
version = "0.1.0"
edition = "2021"
authors = ["Christian Palazzo <christian.palazzo@vimn.com>"]
description = "This application scans recursively node.js projects in order to find and delete unused dependencies declared in the package.json files"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
config = "^0.13.3"
regex = "1.7.0"
